# stream-chat

./: .gitignore  Cargo.toml  Justfile  README.md  spec.md  tui.txt
crates/ytchat-webview/: Cargo.toml
crates/ytchat-webview/src/: lib.rs
src/: app.rs  auth.rs  events.rs  main.rs  message.rs  ui.rs  youtube.rs
