[package]
name = "streamchat"
version = "0.1.0"
edition = "2021"

[dependencies]
# YouTube API
google-youtube3 = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Async utilities
futures = "0.3"

# URL parsing
url = "2"

# Directory for token storage
dirs = "5"
