[package]
name = "ytchat-webview"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.34"
url = "2"
wry = "0.54"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
